<?xml version="1.0"?>
<package format="3">
  <name>teleop_controller</name>
  <version>0.0.0</version>
  <description>A simple ROS 2 package for UDP communication</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license> <!-- Update with your chosen license -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
