<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>video_stream</name>
  <version>0.0.2</version>
  <description>Simple ROS2 package for video streaming</description>
  <maintainer email="dna@ucsb.edu">seamate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>